--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,5 @@ services:
   - type: worker
     name: mushbot
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python bot.py"
-
+    buildCommand: pip install -r requirements.txt
+    startCommand: python bot.py
